network/traefik/apps-path.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
      - name: myapp
        image: containous/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-v1
  namespace: demo
spec:
  selector:
    app: myapp
    version: v1
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: v2
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - name: myapp
        image: containous/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-v2
  namespace: demo
spec:
  selector:
    app: myapp
    version: v2
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v3
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: v3
  template:
    metadata:
      labels:
        app: myapp
        version: v3
    spec:
      containers:
      - name: myapp
        image: containous/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-v3
  namespace: demo
spec:
  selector:
    app: myapp
    version: v3
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: demo
  annotations:
spec:
  ingressClassName: traefik
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: myapp-v1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: myapp-v2
            port:
              number: 80
      - path: /v3
        pathType: Prefix
        backend:
          service:
            name: myapp-v3
            port:
              number: 80
